# Holocron

./: Cargo.toml  README.md
DOCS/: architecture.md  development.md  keybindings.md  mcp-integration.md  roadmap.md
src/: app.rs  config.rs  error.rs  headless.rs  main.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/terminal/: manager.rs  mod.rs  screen.rs  session.rs
src/tui/: events.rs  keybindings.rs  mod.rs  ui.rs
src/tui/widgets/: mod.rs  pane.rs  status_bar.rs
